--- a/bitcoind/bitcoind.yaml
+++ b/bitcoind/bitcoind.yaml
@@ -6,20 +6,6 @@ metadata:
     app: bitcoind
 ---
 apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: bitcoin-conf
-  namespace: bitcoin
-data:
-  bitcoin.conf: |
-    txindex=1
-    server=1
-    rpcuser=mempool
-    rpcpassword=mempool
-    rpcbind=0.0.0.0
-    rpcallowip=0.0.0.0/0
----
-apiVersion: v1
 kind: Secret
 metadata:
   name: bitcoin-conf
@@ -79,6 +65,7 @@ spec:
         - name: bitcoin-conf
           mountPath: /data/.bitcoin/bitcoin.conf
           subPath: bitcoin.conf
+          readOnly: true
       restartPolicy: Always
       terminationGracePeriodSeconds: 930
       volumes:
@@ -86,9 +73,8 @@ spec:
         persistentVolumeClaim:
           claimName: bitcoind-pvc
       - name: bitcoin-conf
-        configMap:
-          defaultMode: 420
-          name: bitcoin-conf
+        secret:
+          secretName: bitcoin-conf
 ---
 apiVersion: v1
 kind: Service
