~ openebs hostpath only supports RWO

--- a/bitcoind/bitcoind.yaml
+++ b/bitcoind/bitcoind.yaml
@@ -23,7 +23,7 @@ metadata:
   namespace: bitcoin
 spec:
   accessModes:
-  - ReadWrite
+  - ReadWriteOnce
   resources:
     requests:
       storage: 900Gi
