--- a/electrs/electrs.yaml
+++ b/electrs/electrs.yaml
@@ -69,7 +69,7 @@ spec:
         - name: electrs-vol
           mountPath: /data
         - name: electrs-conf
-          mountPath: "~/.electrs/config.toml"
+          mountPath: "/root/.electrs/config.toml"
           subPath: config.toml
           readOnly: true
       restartPolicy: Always
