--- a/mempool/mempool.yaml
+++ b/mempool/mempool.yaml
@@ -57,6 +57,21 @@ spec:
           claimName: mempool-db-pvc
 ---
 apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: mempool-db
+  name: mempool-db
+  namespace: bitcoin
+spec:
+  selector:
+    app: mempool-db
+  ports:
+  - name: mysql
+    port: 3306
+    targetPort: 3306
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
