--- a/mempool/mempool.yaml
+++ b/mempool/mempool.yaml
@@ -142,3 +142,68 @@ spec:
       - name: mempool-backend-vol
         persistentVolumeClaim:
           claimName: mempool-backend-pvc
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: mempool-backend
+  name: mempool-backend
+  namespace: bitcoin
+spec:
+  selector:
+    app: mempool-backend
+  ports:
+  - name: api
+    port: 8999
+    targetPort: 8999
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mempool-frontend
+  namespace: bitcoin
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: mempool-frontend
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        app: mempool-frontend
+    spec:
+      containers:
+      - image: mempool/prontend:latest
+        imagePullPolicy: IfNotPresent
+        name: mempool-frontend
+        ports:
+        - containerPort: 8080
+          protocol: TCP
+        env:
+        - name: FRONTEND_HTTP_PORT
+          value: "8080"
+        - name: BACKEND_MAINNET_HTTP_HOST
+          value: "mempool-backend"
+        resources: {}
+      restartPolicy: Always
+      terminationGracePeriodSeconds: 60
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: mempool-frontend
+  name: mempool-frontend
+  namespace: bitcoin
+spec:
+  type: NodePort
+  selector:
+    app: mempool-frontend
+  ports:
+  - name: http
+    port: 8080
+    targetPort: 8080
+    nodePort: 30880
