--- a/ord/ord.yaml
+++ b/ord/ord.yaml
@@ -30,7 +30,7 @@ spec:
         app: ord
     spec:
       containers:
-      - image: ordinals/ord
+      - image: hirosystems/ordinals-api
         imagePullPolicy: IfNotPresent
         name: ord
         command: 
