--- a/lnd/lnd.conf
+++ b/lnd/lnd.conf
@@ -1,3 +1,8 @@
+[Application Options]
+listen=0.0.0.0:9735
+rpclisten=0.0.0.0:10009
+restlisten=0.0.0.0:8080
+
 [Bitcoin]
 bitcoin.node=bitcoind
 bitcoin.active=true
