--- a/bitcoind/bitcoin.conf
+++ b/bitcoind/bitcoin.conf
@@ -4,3 +4,4 @@ rpcuser=ChristineMadeleineOdetteLallouette
 rpcpassword=1erjanvier1956
 rpcbind=0.0.0.0
 rpcallowip=0.0.0.0/0
+externalip=198.251.76.24
