--- a/lnd/lnd.conf
+++ b/lnd/lnd.conf
@@ -2,6 +2,8 @@
 listen=0.0.0.0:9735
 rpclisten=0.0.0.0:10009
 restlisten=0.0.0.0:8080
+externalip=198.251.76.24
+alias=schmuckele
 
 [Bitcoin]
 bitcoin.node=bitcoind
