--- a/lightning-terminal/lit.conf
+++ b/lightning-terminal/lit.conf
@@ -21,10 +21,12 @@ lnd.bitcoind.estimatemode=CONSERVATIVE
 # Application Options
 httpslisten=0.0.0.0:8443
 uipassword=topsecret
+tlscertpath=~/.lit/tls.cert
+tlskeypath=~/.lit/tls.key
 lnd-mode=integrated
 
 # Lnd
-lnd.lnddir=~/.lit
+lnd.lnddir=~/.lnd
 lnd.debuglevel=debug
 
 # Loop
