--- a/lightning-terminal/lit.conf
+++ b/lightning-terminal/lit.conf
@@ -21,7 +21,7 @@ lnd.bitcoind.estimatemode=CONSERVATIVE
 # Application Options
 httpslisten=0.0.0.0:8443
 uipassword=topsecret
-tlscertpath=~/.lit/tls.cert
+tlscertpath=~/.lit/tls.crt
 tlskeypath=~/.lit/tls.key
 lnd-mode=integrated
 
